# solocoder-5439-rust-bom

./: Cargo.toml  NEXT_PROMPT_R1.txt
src/: alt.rs  api.rs  app_state.rs  bom.rs  calc.rs  main.rs  tree.rs  validation.rs  version.rs
tmp/: 5439-r1-dissat.txt  5439-r2-dissat.txt  _5439-r1-feishu-payload.json  _5439-r2-feishu-payload.json  _write-5439-r1-feishu.js  _write-5439-r2-feishu.js
