[package]
name = "bom-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.25"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
thiserror = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
